--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
     position: relative;
     min-height: 100%;
     background: white;
+    font-size: 15px;
 }
 
 .container{
@@ -13,7 +14,14 @@
     justify-content: center;
     margin-top: 5%;
     margin-left: 15%;
-    padding-bottom: 15%;
+    padding-bottom: 7%;
+}
+
+@media only screen and (max-width: 768px){
+    .container {
+        width: 94%;
+        margin-left: 3%;
+    }
 }
 
 .footer{
