--- a/src/components/conteudo/styles.css
+++ b/src/components/conteudo/styles.css
@@ -1,27 +1,28 @@
 h1{
     font-weight: 700;
-    font-size: 2.5em;
+    font-size: 2em;
+    margin-bottom: 1.5em;
 }
-
+ 
 h2{
     font-weight: 700;
     font-size: 1.2em;
     letter-spacing: 0.2em;
-    margin-top: 2em;
+    margin-bottom: 1.5em;
 }
 
 h3{
     font-weight: 700;
     font-size: 1.1em;
     letter-spacing: 0.2em;
-    margin-top: 2em;
+    margin-bottom: 1.5em;
 }
 
 h4{
     font-weight: 700;
     font-size: 1em;
     letter-spacing: 0.2em;
-    margin-top: 3em;
+    margin-bottom: 1.5em;
 }
 
 p{
@@ -73,31 +74,6 @@ a{
     color: #585858;
 }
 
-.options-box{
-    display: inline-block;
-}
-
-.option{
-    margin-top: 1em;
-}
-
-.hint{
-    border: 0.05em solid;
-    border-color: #000000;
-    padding: 1em;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    color: whitesmoke;
-}
-
-.hint.wrong{
-    background-color: rgb(255, 94, 36);
-}
-
-.hint.right{
-    background-color: green;
-}
-
 .button{
     border: 0.1em solid black;
     background-color: white;
@@ -112,6 +88,18 @@ a{
     margin-right: 2em;
 }
 
+/*Centraliza o botão apenas quando a tela estiver na vertical*/
+@media screen and (orientation: portrait) {
+   .button-container{
+        text-align: center;
+    }
+
+    .button{
+        margin-right: 0em;
+        margin-top: 0em;
+    }
+}
+
 .button img{
     height: 1.8em;
     margin-bottom: -0.5em;
@@ -121,8 +109,8 @@ a{
 }
 
 .button:hover{
-    color:rgb(242, 132, 158);
-    border-color: rgb(242, 132, 158);
+    color:rgb(245, 0, 87);
+    border-color: rgb(245, 0, 87);
     cursor: pointer;
 }
 
@@ -139,42 +127,12 @@ a{
     text-justify: center;
 }
 
-.seletor{
-    width: 40%;
-    margin-top: 2em;
-    margin-left: 30%;
-}
-
-.optionRadio:hover{
-    cursor: pointer;
-}
-
-.radioLabel:hover{
-    color:rgb(242, 132, 158);
-    cursor: pointer;
-}
-
-.seletor .button{
-    width: 100%;
-    padding: 0 0 0 0;
-    margin-top: 0.5em;
-    margin-bottom: 0;
-}
-
-.container-proxima-unidade{
-    text-align: center;
-}
-
 .span-referencia{
     color:red;
 }
 
 #nota{
     margin-top: 1em;
-}
-
-.atividadeAvaliativa{
-    margin-bottom: 5em;
 }
 
 .imagem-centralizada {
@@ -223,15 +181,6 @@ a{
 
 .delete-button{
     float:right;
-}
-
-.save-button{
-    float:right;
-}
-
-.button-unidade{
-    margin-left: 1em;
-    margin-right: 1em;
 }
 
 .quadro{
