--- a/src/components/footer/styles.css
+++ b/src/components/footer/styles.css
@@ -1,7 +1,7 @@
 #footer{
-    padding-top: 5%;
-    padding-bottom: 2%;
-    padding-left: 12.5%;
+    padding-top: 3em;
+    padding-bottom: 2em;
+    padding-left: 12em;
     background-color: rgb(246, 246, 246);
 }
 
@@ -14,6 +14,6 @@
 
 @media screen and (orientation: portrait) {
    #footer{
-       padding-left: 2%;
+       padding-left: 1em;
    }
 }
