--- a/src/components/conteudo/styles.css
+++ b/src/components/conteudo/styles.css
@@ -2,6 +2,7 @@ h1{
     font-weight: 700;
     font-size: 2em;
     margin-bottom: 1.5em;
+    margin-top: 2em;
 }
  
 h2{
@@ -9,6 +10,7 @@ h2{
     font-size: 1.2em;
     letter-spacing: 0.2em;
     margin-bottom: 1.5em;
+    margin-top: 2em;
 }
 
 h3{
@@ -16,6 +18,7 @@ h3{
     font-size: 1.1em;
     letter-spacing: 0.2em;
     margin-bottom: 1.5em;
+    margin-top: 2em;
 }
 
 h4{
@@ -23,6 +26,7 @@ h4{
     font-size: 1em;
     letter-spacing: 0.2em;
     margin-bottom: 1.5em;
+    margin-top: 2em;
 }
 
 p{
@@ -62,9 +66,18 @@ a{
 }
 
 .box-alg-question{
-    width: 90%;
+    width: 100%;
     text-align: left;
-    padding-bottom: 3em;
+    padding-bottom: 0.5em;
+    margin-bottom: 0.5em;
+    margin-top: 1em;
+}
+
+.box-alg-question .head{
+    background-color: rgba(144, 144, 144, 0.075);
+    border-bottom: 0.05em solid #000000;
+    padding-top: 0.3em;
+    padding-bottom: 0.5em;
 }
 
 .box-alg-question .head .titulo{
@@ -81,20 +94,32 @@ a{
 
 .boxed.algoritmos{
     background-color: rgb(241, 239, 198);
-    margin-bottom: 3em;
+    margin-bottom: 2em;
+    padding-top: 1em;
+    padding-bottom: 1em;
     text-align: left;
 }
 
 .boxed.algoritmos .nivel-1, .box-alg-question .nivel-1{
-    padding-top: 2em;
-    padding-left: 1em;
+    padding-left: 2em;
 }
 
 .boxed.algoritmos .subnivel, .box-alg-question .subnivel{
     padding-left: 2em;
+    padding-top: 0.3em;
+    color: #585858;
 }
 
-.boxed.algoritmos .bg-orange{
+.boxed.algoritmos .subnivel li, .box-alg-question .subnivel li{
+    padding-bottom: 0.3em;
+    color: #585858;
+}
+
+.boxed.algoritmos .subnivel .sublista, .box-alg-question .subnivel .sublista{
+    list-style-type: none;
+}
+
+.boxed.algoritmos.bg-orange{
     background-color: rgb(249, 203, 156);
 }
 
@@ -117,7 +142,8 @@ a{
 
 .boxed.problema{
     background-color: rgb(251, 229, 205);
-    margin-bottom: 3em;
+    margin-bottom: 0.3em;
+    text-align: left;
 }
 
 .boxed.problema textarea{
@@ -125,6 +151,7 @@ a{
     font-size: 1em;
     font-family: 'Source Sans Pro', sans-serif;
     color: #585858;
+    margin-top: 0.3em;
 }
 
 .button{
@@ -241,6 +268,7 @@ a{
 }
 
 .enunciado-atividade{
-    margin-top: 1em;
+    margin-top: 3em;
     margin-bottom: 2em;
+    font-weight: 700;
 }
