--- a/src/components/conteudo/utils/atividade_integral_generica/styles.css
+++ b/src/components/conteudo/utils/atividade_integral_generica/styles.css
@@ -19,14 +19,14 @@
     user-select: none;
 }
 
-/* Hide the browser's default radio button */
+/* Hide the browser's default radio button .*/
 .radioLabel input{
     position: absolute;
     opacity: 0;
     cursor: pointer;
 }
 
-/* Create a custom radio button */
+/* Create a custom radio button .*/
 .checkmark {
   position: absolute;
   top: 0;
@@ -43,30 +43,30 @@
     cursor: pointer;
 }
 
-/* On mouse-over, add a grey background color */
+/* On mouse-over, add a grey background color .*/
 .radioLabel:hover input ~ .checkmark {
   background-color: #ccc;
 }
 
-/* When the radio button is checked, add a blue background */
+/* When the radio button is checked, add a blue background .*/
 .radioLabel input:checked ~ .checkmark {
   background-color: white;
   border-color: rgb(245, 0, 87);
 }
 
-/* Create the indicator (the dot/circle - hidden when not checked) */
+/* Create the indicator (the dot/circle - hidden when not checked) .*/
 .checkmark:after {
   content: "";
   position: absolute;
   display: none;
 }
 
- /* Show the indicator (dot/circle) when checked */
+ /* Show the indicator (dot/circle) when checked .*/
 .radioLabel input:checked ~ .checkmark:after {
   display: block;
 }
 
-/* Style the indicator (dot/circle) */
+/* Style the indicator (dot/circle) .*/
 .radioLabel .checkmark:after {
  	top: 4px;
 	left: 4px;
