Refactor: Organização dos algoritmos e da atividade integral

--- a/src/components/generics/activity/integral_activity/styles.css
+++ b/src/components/generics/activity/integral_activity/styles.css
@@ -1,15 +1,12 @@
-.container{
+.container-integral-activity{
     margin-bottom: 5em;
+    text-align: left;
 }
 
 .activity-statement{
     margin-top: 3em;
     margin-bottom: 2em;
     font-weight: 700;
-}
-
-.options-box{
-    display: inline-block;
 }
 
 .hint{
