--- a/src/components/generics/algorithm_box/styles.css
+++ b/src/components/generics/algorithm_box/styles.css
@@ -1,21 +1,22 @@
-.alg-box{
-    width: 100%;
-    text-align: left;
-    padding-bottom: 0.5em;
-    margin-bottom: 0.5em;
-    margin-top: 1em;
+.boxed{
     border: 0.05em solid #000000;
 }
 
-.alg-box .head{
-    background-color: rgba(144, 144, 144, 0.075);
-    border-bottom: 0.05em solid #000000;
-    padding-top: 0.3em;
-    padding-bottom: 0.5em;
+.boxed{
+    width: 70%;
+    text-align: justify;
+    padding: 2em;
 }
 
-.alg-box .head .title{
+.boxed.algorithm{
+    background-color: rgb(241, 239, 198);
+    margin-bottom: 2em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    text-align: left;
+}
+
+.boxed.algorithm .title{
+    text-align: center;
     font-weight: 700;
-    color: rgb(77, 132, 4);
-    padding-left: 1em;
 }
