--- a/src/components/main/styles.css
+++ b/src/components/main/styles.css
@@ -8,6 +8,7 @@
     font-family: 'Source Sans Pro', sans-serif;
     color: #585858;
     font-weight: 100;
+    margin-bottom: 2em;
 }
 
 @media only screen and (max-width: 768px){
