--- a/src/components/generics/pagination/styles.css
+++ b/src/components/generics/pagination/styles.css
@@ -20,7 +20,7 @@
 }
 
 .pagination li a {
-    padding: 0.7em 1em;
+    padding: 0.7em 1.3em;
     margin: 0.7em 0.7em;
     display: inline-block;
     background-color:#f9f7f7;
@@ -30,9 +30,10 @@
 }
 
 .pagination li a:hover{
-    border: 0.1em solid rgb(242, 132, 158);;
-    font-size: 1.4em;
-    margin: 0em 0.1em;
+    border: 0.1em solid rgb(242, 132, 158);
+    font-size: 1.2em;
+    margin: 0.4em 0.5em;
+    padding: 0.6em 1.1em;
 }
 
 .pagination li a:active{
