Bug(Atividades): Correção de bugs dentro da atividade integral e atividade complementar

--- a/src/components/generics/buttons/basic_button/styles.css
+++ b/src/components/generics/buttons/basic_button/styles.css
@@ -27,8 +27,12 @@
     margin-top: -0.5em;
 }
 
-.button-container{
+.button-container-right{
     margin-right: 2em;
+}
+
+.button-container-left{
+    margin-left: 2em;
 }
 
 .button-container-bigger{
