--- a/src/components/generics/footer/styles.css
+++ b/src/components/generics/footer/styles.css
@@ -4,7 +4,7 @@
     padding-top: 3em;
     padding-bottom: 2em;
     padding-left: 12em;
-    background-color: rgb(246, 246, 246);
+    background-color: rgb(246,246,246);
 }
 
 .footer-content{
@@ -15,7 +15,9 @@
 }
 
 @media screen and (orientation: portrait) {
-   .footer{
+   .footer-container{
        padding-left: 1em;
+       padding-top: 0.5em;
+       padding-bottom: 0.2em;
    }
 }
