--- a/src/components/generics/pagination/styles.css
+++ b/src/components/generics/pagination/styles.css
@@ -5,7 +5,7 @@
     list-style: none;
     background-color: inherit;
     text-align: center;
-    margin-top: 3em;
+    margin-bottom: 0em;
     padding-left: 0;
 }
 
