--- a/src/components/generics/activity/complementary_activity/styles.css
+++ b/src/components/generics/activity/complementary_activity/styles.css
@@ -2,6 +2,10 @@
     margin-bottom: 5em;
 }
 
+.complementary-activity-container p{
+    text-align: left;
+}
+
 .algorithms h4{
     margin-top: 1em;
 }
