--- a/src/components/generics/box/styles.css
+++ b/src/components/generics/box/styles.css
@@ -6,7 +6,7 @@
 .box-container textarea{
     width: 100%;
     font-size: 1em;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Nunito', sans-serif;
     color: #585858;
     margin-top: 0.3em;
 }
