--- a/src/components/generics/unit_base/styles.css
+++ b/src/components/generics/unit_base/styles.css
@@ -84,7 +84,7 @@ a{
 .algoritmos textarea{
     width: 100%;
     font-size: 1em;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Nunito', sans-serif;
     color: #585858;
 }
 
