--- a/src/components/main/styles.css
+++ b/src/components/main/styles.css
@@ -5,9 +5,9 @@
 
 .unit-container{
     width: 100%;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Nunito', sans-serif;
     color: #585858;
-    font-weight: 100;
+    font-weight: 400;
     margin-bottom: 0.5em;
 }
 
