--- a/src/components/generics/pagination/styles.css
+++ b/src/components/generics/pagination/styles.css
@@ -37,6 +37,7 @@
     border-color: #999D9E;
     background: rgba(0, 0, 0, 0);
     color: #999D9E;
+    cursor: pointer;
 }
 
 div.unit-box-container{
@@ -53,6 +54,10 @@ div.unit-box-container{
 div.unit-box-item{
     float: right;
     padding: 0.1em 1em 0em 1em;
+}
+
+div.unit-box-item.button-item{
+    cursor: pointer;
 }
 
 div.unit-box-text{
@@ -106,6 +111,7 @@ div.return-button-container{
     margin-right: 10em;
     background-color: #FFFFFF;
     text-align: center;
+    cursor: pointer;
 }
 
 .return-button{
