Feat(Paginação): Adaptação da paginação para última e primeira unidade

--- a/src/components/generics/pagination/styles.css
+++ b/src/components/generics/pagination/styles.css
@@ -131,6 +131,7 @@ div.return-button-container{
     float: left;
     font-weight: 700;
     color: #989ea0;
+    cursor: pointer;
 }
 
 div.slides-text-container{
