--- a/src/components/generics/font/small/styles.css
+++ b/src/components/generics/font/small/styles.css
@@ -1,3 +1,8 @@
 .small-font{
-    font-size: 0.9em;
+    font-size: 0.8em;
+}
+@media only screen and (min-width: 1600px) {
+    .small-font{
+        font-size: 1em;
+    }
 }
