--- a/src/components/generics/characters/simple-talk/styles.css
+++ b/src/components/generics/characters/simple-talk/styles.css
@@ -1,7 +1,6 @@
 div.main-container{
     width: 100%;
     height: 100%;
-    padding-top: 1%;
     top: 0;
     position: fixed;
     background-color: rgba(244, 243, 243, 0.5);
@@ -29,11 +28,12 @@ div.character-container div.content{
     text-align: justify;
     font-weight: 700;
     width: 23em;
+    height: 12em;
 }
 
 div.character-container div.text{
-    margin-top: 1em;
     color: black;
+    margin-top: 1em;
 }
 
 div.character-container div.title{
@@ -64,9 +64,6 @@ div.buttons-container div.button.first-button{
 }
 
 div.buttons-container div.button.next-button, div.buttons-container div.button.previous-button, div.buttons-container div.button.last-previous{
-    padding: 0em;
-    padding-left: 0.8em;
-    padding-right: 0.6em;
     border-radius: 0.5em;
 }
 
@@ -105,38 +102,37 @@ div.close-button-underline{
 
 @media only screen and (min-width: 1600px) {
     div.character-container{
-        padding-top: 9em;
         width: 70em;
     }
     div.character-container div.content{
         margin-left: 48.5%;
         width: 30em;
+        height: 19em;
     }
     div.buttons-container{
         margin-top: 4em;
     }
     div.buttons-container div.button.first-button{
-        margin-left: 25.45em;
+        margin-left: 25em;
     }
     div.buttons-container div.button.previous-button{
-        margin-left: 25em;
+        margin-left: 25.7em;
         margin-right: 2em;
     }
     div.buttons-container div.button.last-previous{
-        margin-left: 19em;
+        margin-left: 19.5em;
         margin-right: 0.8em;
     }
     div.buttons-container div.button.next-button, div.buttons-container div.button.previous-button, div.buttons-container div.button.last-previous{
-        padding-left: 1.1em;
-        padding-right: 0.9em;
         border-radius: 0.5em;
     }
     div.close-button-container{
-        margin-left: 46.2em;
-        margin-top: 5em;
+        margin-left: 45.7em;
+        margin-top: 1.5em;
     }
     div.close-button-underline{
         width: 5.2em;
+        height: 0.1em;
         margin-left: 0.77em;
     }
 }
