--- a/src/components/generics/context_menu/styles.css
+++ b/src/components/generics/context_menu/styles.css
@@ -74,6 +74,10 @@ div.page-info-text{
     height: 2.2em;
     padding-left: 0.7em;
     padding-right: 0.7em;
+    animation-name: fadeInOutContextMenuPageInfoText;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 1;
+    animation-duration: 0.5s;
 }
 @media only screen and (min-width: 1600px) {
     div.extra-content-button-container{
@@ -143,3 +147,26 @@ div.page-info-text{
         height: 0.2em;
     }
 }
+
+@keyframes fadeInOutContextMenuPageInfoText {
+    100% {
+        height: 2.2em;
+    }
+    80% {
+        height: 1.8em;
+    }
+    60% {
+        height: 1.4em;
+    }
+    40% {
+        height: 1em;
+    }
+    20% {
+        height: 0.6em;
+    }
+    0% {
+        height: 0.2em;
+    }
+}
+
+
