--- a/src/components/generics/top_bar/styles.css
+++ b/src/components/generics/top_bar/styles.css
@@ -1,7 +1,7 @@
 div.top-bar-container{
     position: fixed;
     width: 100%;
-    height: 7%;
+    height: 10%;
     top: 0;
     display: flex;
     align-items: center;
@@ -32,6 +32,17 @@ div.top-bar-container div.top-context-menu-container{
     height: 60%;
     width: 50%;
     border-radius: 0em 0em 0.25em 0.25em;
+    animation-name: fadeInOutTopBarContextMenu;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 1;
+    animation-duration: 0.3s;
+}
+div.top-bar-container .top-context-menu-container.top-context-menu-container-hidden{
+    animation-name: fadeInOutTopBarContextMenuInverse;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 1;
+    animation-duration: 0.3s;
+    opacity: 0;
 }
 div.top-bar-container div.top-context-menu-container div.course-name{
     float: left;
@@ -44,6 +55,12 @@ div.top-bar-container div.top-context-menu-container div.unit-name{
     width: 50%;
     text-align: center;
     margin-top: 0.5%;
+}
+
+@media only screen and (min-width: 1600px) {
+    div.top-bar-container{
+        height: 7%;
+    }
 }
 
 @keyframes fadeInOutTopBar {
@@ -85,5 +102,47 @@ div.top-bar-container div.top-context-menu-container div.unit-name{
     }
     0% {
         height: 7%;
+    }
+}
+
+@keyframes fadeInOutTopBarContextMenu {
+    100% {
+        height: 60%;
+    }
+    80% {
+        height: 48%;
+    }
+    60% {
+        height: 36%;
+    }
+    40% {
+        height: 24%;
+    }
+    20% {
+        height: 12%;
+    }
+    0% {
+        height: 0%;
+    }
+}
+
+@keyframes fadeInOutTopBarContextMenuInverse {
+    100% {
+        opacity: 0;
+    }
+    80% {
+        opacity: 0.2;
+    }
+    60% {
+        opacity: 0.4;
+    }
+    40% {
+        opacity: 0.6;
+    }
+    20% {
+        opacity: 0.8;
+    }
+    0% {
+        opacity: 1;
     }
 }
