--- a/src/components/generics/content_container/styles.css
+++ b/src/components/generics/content_container/styles.css
@@ -1,18 +1,15 @@
-.basic-text-container{
-    padding-left: 10em;
-    padding-right: 10em;
+.content-container{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #f9f9f9;
 }
 
-@media only screen and (max-width: 768px){
-    .basic-text-container {
-        padding-left: 0em;
-        padding-right: 0em;
-    }
-}
-
-@media screen and (orientation: portrait) {
-   .basic-text-container{
-        padding-left: 0em;
-        padding-right: 0em;
-   }
+.text-container{
+    width: 920px;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: #ffffff;
 }
