--- a/src/components/generics/font/large/styles.css
+++ b/src/components/generics/font/large/styles.css
@@ -1,8 +1,8 @@
 .large-font{
-    font-size: 1.5em;
+    font-size: 26pt;
 }
 @media only screen and (min-width: 1600px) {
     .large-font{
-        font-size: 1.8em;
+        font-size: 30pt;
     }
 }
