--- a/src/components/generics/font/medium/styles.css
+++ b/src/components/generics/font/medium/styles.css
@@ -1,8 +1,8 @@
 .medium-font{
-    font-size: 1em;
+    font-size: 12pt;
 }
 @media only screen and (min-width: 1600px) {
     .medium-font{
-        font-size: 1.2em;
+        font-size: 18pt;
     }
 }
