--- a/src/components/generics/top_bar/styles.css
+++ b/src/components/generics/top_bar/styles.css
@@ -1,7 +1,7 @@
 div.top-bar-container{
     position: fixed;
     width: 100%;
-    height: 10%;
+    height: 75px;
     top: 0;
     display: flex;
     align-items: center;
@@ -11,17 +11,20 @@ div.top-bar-container{
     animation-iteration-count: 1;
     animation-duration: 0.3s;
 }
-div.top-bar-container-hidden{
+div.top-bar-container div.top-bar-line{
+    background-color: #eaa000;
+    height: 25px;
+    width: 100%;
+}
+.top-bar-container.top-bar-container-hidden-without-animation .top-bar-line{
+    height: 0px;
+}
+.top-bar-container.top-bar-container-hidden .top-bar-line{
     animation-name: fadeInOutTopBarInverse;
     animation-timing-function: ease-in-out;
     animation-iteration-count: 1;
     animation-duration: 0.3s;
-    height: 0%;
-}
-div.top-bar-container div.top-bar-line{
-    background-color: #eead2d;
-    height: 40%;
-    width: 100%;
+    height: 0px;
 }
 div.top-bar-container div.top-context-menu-container{
     background: rgb(0,158,195); /* Old browsers */
@@ -29,9 +32,9 @@ div.top-bar-container div.top-context-menu-container{
     background: -webkit-linear-gradient(left,  rgba(0,158,195,1) 50%,rgba(0,183,234,1) 50%,rgba(0,183,234,1) 50%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to right,  rgba(0,158,195,1) 50%,rgba(0,183,234,1) 50%,rgba(0,183,234,1) 50%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#009ec3', endColorstr='#00b7ea',GradientType=1 ); /* IE6-9 */
-    height: 60%;
-    width: 50%;
-    border-radius: 0em 0em 0.25em 0.25em;
+    height: 50px;
+    width: 960px;
+    border-radius: 0px 0px 15px 15px;
     animation-name: fadeInOutTopBarContextMenu;
     animation-timing-function: ease-in-out;
     animation-iteration-count: 1;
@@ -44,23 +47,22 @@ div.top-bar-container .top-context-menu-container.top-context-menu-container-hid
     animation-duration: 0.3s;
     opacity: 0;
 }
+div.top-bar-container .top-context-menu-container.top-context-menu-container-hidden-without-animation{
+    opacity: 0;
+}
 div.top-bar-container div.top-context-menu-container div.course-name{
     float: left;
     width: 50%;
-    text-align: center;
-    margin-top: 0.5%;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
 }
 div.top-bar-container div.top-context-menu-container div.unit-name{
     float: left;
     width: 50%;
-    text-align: center;
-    margin-top: 0.5%;
-}
-
-@media only screen and (min-width: 1600px) {
-    div.top-bar-container{
-        height: 7%;
-    }
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
 }
 
 @keyframes fadeInOutTopBar {
